Allow breaking words in link wrapping to fix mobile issue

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -39,6 +39,10 @@ article.post {
       margin-right: 0.5em;
       content: "➔  ";
     }
+
+    p a {
+      word-wrap: break-word;
+    }
 }
 
 // Smaller borders for very small screens
